syntax = "proto3";

import "com/sunya/electionguard/proto/common.proto";
import "com/sunya/electionguard/proto/key_ceremony.proto";

option java_package = "com.sunya.electionguard.proto";
option java_outer_classname = "TrusteeProto";

// LOOK may replace key_ceremony.proto ??

message Trustees {
  repeated Trustee trustees = 1;
}

message Trustee {
  string guardian_id = 1;
  uint32 guardian_sequence = 2; // i=1,number of guardians
  ElGamalKeyPair election_key_pair = 3;
  RSAPrivateKey rsa_private_key = 4; // auxiliary private key
  // Other guardians' partial key backups shared with this guardian
  repeated ElectionPartialKeyBackup other_guardian_backups = 5;
}